tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/float/nan-incomplete-3.stderr
TOML parse error at line 1, column 21
  |
1 | nan-incomplete-3 = -na
  |                     ^
invalid integer
